--- a/index.html
+++ b/index.html
@@ -36,5 +36,15 @@
 
     </div>
     </div>
+
+    <div class = footer>   
+       <div class="contact-details">
+           <h6>Email: pph@gmail.com</h6>
+               <h6>Contact details: 0313574052</h6>
+               Alternative contact: 0313574050
+               Whats app number to place an order: 0728127222
+           
+       </div>
+    </div>
 </body>
 </html>
